<resources>
    <string name="app_name">Lexi</string>
    <!-- Strings related to login -->
    <!-- Pantalla inicial -->
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_menu">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="olvide_contrasenia">Olvidé mi contraseña</string>
    <string name="inicio_sesion">Iniciar sesión</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="conectar_con">Conectar con</string>
    <!-- Pantalla crearCuenta-->
    <string name="nombre">Nombre</string>
    <string name="confirmar_contrasenia">Confirmar Contraseña</string>
    <string name="boton_registrar">Registrar</string>
    <!-- Pantalla selección de idioma-->
    <string name="que_idioma_aprenderas">¿Qué idioma aprenderás hoy?</string>
    <string name="perfil">Perfil</string>
    <string name="inicio">Inicio</string>
    <string name="mis_cursos">Mis cursos</string>
    <string name="editar_perfil">Editar Perfil</string>

    <string name="cursos_de_nombre">Cursos de Nombre</string>
    <string name="boton_continuar">Continuar</string>
    <string name="nivel_10">Nivel 10</string>
    <string name="negocios">Negocios</string>
    <string name="peliculas_series">Películas/Series</string>
    <string name="deportes">Deportes</string>
    <string name="m_sica">Música</string>
    <string name="gastronom_a">Gastronomía</string>
    <string name="historia">Historia</string>
    <string name="moda">Moda</string>
    <!-- Pantalla home-->
    <string name="ingles">Inglés</string>
    <string name="coreano">Coreano</string>
    <string name="introduccion">Introducción</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectetur adipiscing elit sollicitudin auctor vestibulum, mi ridiculus leo eget commodo litora ultrices semper nisi purus, at natoque pretium nec dictumst taciti arcu ullamcorper quam. Purus metus potenti nascetur sociis maecenas convallis donec eleifend augue platea, mattis dis phasellus semper orci dapibus ligula eros id aenean, tellus consequat tincidunt torquent tempor mi luctus cras fusce. Lorem ipsum dolor sit amet consectetur adipiscing elit sollicitudin auctor vestibulum, mi ridiculus.</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="imagen_de_logro">Imagen de logro</string>
    <string name="progreso">Progreso</string>
    <string name="logros">Logros</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="imagen_de_logo">imagen de logo</string>
    <string name="hola">Hola,</string>
    <string name="que_idioma_aprenderas_hoy">¿Qué idioma aprenderás hoy?</string>
    <string name="basico">Básico</string>
    <string name="intermedio">Intermedio</string>
    <string name="avanzado">Avanzado</string>
    <string name="continuar">Continuar</string>
    <string name="t_tulo">Título</string>
    <string name="pregunta">Pregunta</string>
    <string name="nivel_1">Nivel 1</string>
    <string name="traduce">Traduce</string>
    <string name="traduce_la_frase_aqui">Traduce la frase aquí</string>
    <string name="en_espanol">En español</string>
    <string name="completa">Completa</string>
    <string name="usando_las_palabras">Usando las palabras:</string>
</resources>