<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="equipo.tres.lexi.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_cursos"
        android:name="equipo.tres.lexi.ui.cursos.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_cursos" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="equipo.tres.lexi.ui.notifications.NotificationsFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>