<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azul_pastel"
        android:gravity="center_vertical"
        android:paddingVertical="30dp">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:backgroundTint="@color/white"
            app:backgroundTint="@null" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/crear_cuenta"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="center"/>

        <androidx.legacy.widget.Space
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingTop="20dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@drawable/bgn_edit_text1"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:selectAllOnFocus="true"
            android:elevation="5dp"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bgn_edit_text1"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:selectAllOnFocus="true"
            android:elevation="5dp"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bgn_edit_text1"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="10dp"
            android:selectAllOnFocus="true"
            android:elevation="5dp"/>

        <EditText
            android:id="@+id/passwordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bgn_edit_text1"
            android:hint="@string/confirmar_contrasenia"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="10dp"
            android:selectAllOnFocus="true"
            android:elevation="5dp"/>

        <Button
            android:id="@+id/btn_crear_cuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_button1"
            android:enabled="true"
            android:text="@string/boton_registrar"
            app:backgroundTint="@null"
            android:layout_marginTop="20dp"
            android:elevation="5dp"/>
    </LinearLayout>


</LinearLayout>