<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ejercicios.TraducirActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azul_pastel"
        android:gravity="center_vertical"
        android:paddingVertical="30dp">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:backgroundTint="@color/white"
            app:backgroundTint="@null" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nivel_1"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="center"/>

        <androidx.legacy.widget.Space
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/traduce"
                android:textSize="30sp"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="30dp">

                <TextView
                    android:id="@+id/frase"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Frase a traducir"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/menu"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_baseline_volume_up_24"
                    android:background="@drawable/round_button_menu"/>

            </LinearLayout>

            <EditText
                android:id="@+id/respuesta"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="start|top"
                android:hint="@string/traduce_la_frase_aqui"
                android:background="@drawable/border"
                android:inputType="textMultiLine"
                android:padding="20dp"
                android:layout_marginVertical="10dp"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/btn_continuar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_gravity="center"
                android:background="@drawable/round_button2"
                android:enabled="true"
                android:text="@string/continuar"
                android:elevation="5dp"
                app:backgroundTint="@null"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>