<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgn4"
    android:orientation="vertical"
    tools:context=".ui.home.NivelesActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margintop_intro"
        android:layout_weight=".16">

        <TableRow>

            <Button
                android:id="@+id/btn_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:background="@drawable/ic_baseline_arrow_back_24"
                android:backgroundTint="@color/white"
                app:backgroundTint="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/margintop_intro"
                android:fontFamily="sans-serif"
                android:text="@string/bienvenido"
                android:textColor="@color/white"
                android:textSize="@dimen/text_mensaje"
                android:textStyle="normal" />
        </TableRow>
    </TableLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/fab_margin">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margintop_intro"
            android:orientation="horizontal">

            <TableRow>

                <Button
                    android:id="@+id/btn_basico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/round_button2"
                    android:backgroundTint="@null"
                    android:text="@string/basico" />

                <Button
                    android:id="@+id/btn_intermedio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/round_button2"
                    android:backgroundTint="@null"
                    android:text="@string/intermedio" />

                <Button
                    android:id="@+id/btn_avanzado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:background="@drawable/round_button2"
                    android:backgroundTint="@null"
                    android:text="@string/avanzado" />
            </TableRow>
        </TableLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_weight="1"
        android:background="@drawable/bgn_scroll_view1"
        android:orientation="vertical">

        <GridView
            android:id="@+id/gv_niveles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:numColumns="1" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgn_edit_text1"
        app:menu="@menu/menu_navegation_home_cursos_perfil" />

</LinearLayout>