<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bgn2"
    tools:context=".ui.perfil.PerfilActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingVertical="30dp">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:backgroundTint="@color/white"
            app:backgroundTint="@null" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/perfil"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="center"/>

        <androidx.legacy.widget.Space
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/bgn_scroll_view1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="10dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imagen_perfil"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_mochi_mochi_peach_cat_friend_2_"
                android:contentDescription="@string/foto_de_perfil"
                android:background="@drawable/btn_azul"/>

            <TextView
                android:id="@+id/txt_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nombre"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_idioma1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/idioma2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_progreso"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <ProgressBar
                        android:id="@+id/progress_bar_ingles"
                        xmlns:tools="http://schemas.android.com/tools"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:progressDrawable="@drawable/progress_bar_gradient"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <ProgressBar
                        android:id="@+id/progress_bar_frances"
                        xmlns:tools="http://schemas.android.com/tools"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:progressDrawable="@drawable/progress_bar_gradient"
                        />
                </LinearLayout>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_baseline_pets_24"
                    android:background="@drawable/bgn_logros"
                    android:contentDescription="@string/imagen_de_logro" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="30dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/progreso"
                        android:textStyle="bold"
                        android:textSize="15sp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_share_24"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logros"
                        android:textStyle="bold"
                        android:textSize="15sp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_share_24"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="30dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_edit_24"/>

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/editar_perfil"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="30dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_account_circle_24"
                    app:tint="@color/rojo" />

                <TextView
                    android:id="@+id/tv_logout"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/cerrar_sesion"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgn_edit_text1"
        app:menu="@menu/menu_navegation_home_cursos_perfil" />

</LinearLayout>